vpc.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Parameters": {
    "project": {
      "Default": "cf-basics VPC",
      "Type": "String",
      "Description": "Base Project Name "
    },
    "AdminIP": {
      "Default": "172.0.0.0/16",
      "Type": "String",
      "Description": "IP Address for Admin"
    }
    ,
    "ServiceProviderIP": {
      "Default": "10.0.0.0/16",
      "Type": "String",
      "Description": "IP Address for Service Provider"
    }
  },
  "Description": "Basic VPC Template: https://github.com/peeweeh/cf-basics",
  "Resources": {

    "PublicSubnetA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
       "Tags" : [ { "Key" : "Name", "Value" : "Public Subnet A" } ],
       "VpcId": {
        "Ref": "VPCMain"
      },
      "CidrBlock": "10.0.0.0/23",
      "AvailabilityZone": "ap-southeast-1a"
    }
  },
  "NetworkAcl2DefaultACL2AssociationSet20": {
    "Type": "AWS::EC2::SubnetNetworkAclAssociation",
    "Properties": {
      "SubnetId": {
        "Ref": "PublicSubnetA"
      },
      "NetworkAclId": {
        "Ref": "NetworkAcl2DefaultACL"
      }
    }
  },
  "RouteTable2RT02AssociationSet22": {
    "Type": "AWS::EC2::SubnetRouteTableAssociation",
    "Properties": {
      "SubnetId": {
        "Ref": "PublicSubnetA"
      },
      "RouteTableId": {
        "Ref": "RouteTable2RT0"
      }
    }
  },
  "PublicServerSec": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "VpcId": {
        "Ref": "VPCMain"
      },
      "GroupDescription": "Security Group for Public Facing Instances",
      "Tags" : [ { "Key" : "Name", "Value" : "Public Server" } ],
    }
  },
  "PrivateSubnetA": {
    "Type": "AWS::EC2::Subnet",
    "Properties": {
      "Tags" : [ { "Key" : "Name", "Value" : "Private Subnet A" } ],
      "VpcId": {
        "Ref": "VPCMain"
      },
      "CidrBlock": "10.0.2.0/23",
      "AvailabilityZone": "ap-southeast-1a"
    }
  },
  "PrivateSubnetB": {
    "Type": "AWS::EC2::Subnet",
    "Properties": {
      "Tags" : [ { "Key" : "Name", "Value" : "Private Subnet B" } ],
      "VpcId": {
        "Ref": "VPCMain"
      },
      "CidrBlock": "10.0.10.0/23",
      "AvailabilityZone": "ap-southeast-1b"
    }
  },
  "VPCMain": {
    "Type": "AWS::EC2::VPC",
    "Properties": {
      "CidrBlock": "10.0.0.0/16",
      "EnableDnsSupport": true,
      "InstanceTenancy": "default",
      "EnableDnsHostnames": true
    }
  },
  "DefaultSec": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "VpcId": {
        "Ref": "VPCMain"
      },
      "GroupDescription": "default VPC security group",
      "Tags" : [ { "Key" : "Name", "Value" : "Default Security Group" } ],
    }
  },
  "LoadBalancerSec": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "VpcId": {
        "Ref": "VPCMain"
      },
      "GroupDescription": "Security Group for Load Balancers",
      "Tags" : [ { "Key" : "Name", "Value" : "Load Balancer Security Group" } ],
    }
  },
  "RouteTable2RT02RouteSet21": {
    "Type": "AWS::EC2::Route",
    "Properties": {
      "GatewayId": {
        "Ref": "InternetGateway2Internetgateway"
      },
      "DestinationCidrBlock": "0.0.0.0/0",
      "RouteTableId": {
        "Ref": "RouteTable2RT0"
      }
    }
  },
  "PublicSubnetB": {
    "Type": "AWS::EC2::Subnet",
    "Properties": {
      "Tags" : [ { "Key" : "Name", "Value" : "Public Subnet B" } ],
      "VpcId": {
        "Ref": "VPCMain"
      },
      "CidrBlock": "10.0.8.0/23",
      "AvailabilityZone": "ap-southeast-1b"
    }
  },
  
  "PublicServerSec2Egress20": {
    "Type": "AWS::EC2::SecurityGroupEgress",
    "Properties": {
      "ToPort": "65535",
      "FromPort": "0",
      "GroupId": {
        "Ref": "PublicServerSec"
      },
      "IpProtocol": "-1",
      "CidrIp": "0.0.0.0/0"
    }
  },
 
  "RouteTable2RT0": {
    "Type": "AWS::EC2::RouteTable",
    "Properties": {
      "VpcId": {
        "Ref": "VPCMain"
      },
      "Tags": [
        {
          "Value": "true",
          "Key": "visops_default"
        }
      ]
    }
  },
  "PublicServerSec2Ingress20": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "ToPort": "65535",
      "FromPort": "0",
      "CidrIp": "10.0.0.0/16",
      "GroupId": {
        "Ref": "PublicServerSec"
      },
      "IpProtocol": "tcp"
    }
  },
  "DBSubnetGroup2subnetgroup0": {
    "Type": "AWS::RDS::DBSubnetGroup",
    "Properties": {
      "SubnetIds": [
        {
          "Ref": "PrivateSubnetA"
        },
        {
          "Ref": "PrivateSubnetB"
        }
      ],
      "DBSubnetGroupDescription": "subnetgroup0 default description"
    }
  },


  "PrivateServerSec2Ingress20": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "ToPort": "65535",
      "FromPort": "0",
      "CidrIp": "10.0.0.0/16",
      "GroupId": {
        "Ref": "PrivateServerSec"
      },
      "IpProtocol": "tcp"
    }
  },

  "NetworkAcl2DefaultACL": {
    "Type": "AWS::EC2::NetworkAcl",
    "Properties": {
      "VpcId": {
        "Ref": "VPCMain"
      }
    }
  },

  "AdminIngress": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "ToPort": "65535",
      "FromPort": "0",
      "GroupId": {
        "Ref": "AdminSec"
      },
      "IpProtocol": "-1",
      "CidrIp": {"Ref": "AdminIP"}
    }
  },
  "ServiceProviderIngress": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "ToPort": "65535",
      "FromPort": "0",
      "GroupId": {
        "Ref": "AdminSec"
      },
      "IpProtocol": "-1",
      "CidrIp": {"Ref": "ServiceProviderIP"}
    }
  },
  "NetworkAcl2DefaultACL2AssociationSet24": {
    "Type": "AWS::EC2::SubnetNetworkAclAssociation",
    "Properties": {
      "SubnetId": {
        "Ref": "PrivateSubnetA"
      },
      "NetworkAclId": {
        "Ref": "NetworkAcl2DefaultACL"
      }
    }
  },
  "NetworkAcl2DefaultACL2AssociationSet25": {
    "Type": "AWS::EC2::SubnetNetworkAclAssociation",
    "Properties": {
      "SubnetId": {
        "Ref": "PrivateSubnetB"
      },
      "NetworkAclId": {
        "Ref": "NetworkAcl2DefaultACL"
      }
    }
  },
  "AdminSec": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "VpcId": {
        "Ref": "VPCMain"
      },
      "GroupDescription": "Security Group for Administration and Service Providers",
      "Tags" : [ { "Key" : "Name", "Value" : "Office and Admin" } ],
    }
  },
  "PrivateServerSec": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "VpcId": {
        "Ref": "VPCMain"
      },
      "GroupDescription": "Security group for Instances that are not public facing",
      "Tags" : [ { "Key" : "Name", "Value" : "Private Server" } ],
    }
  },
  "AttachInternetGateway": {
    "Type": "AWS::EC2::VPCGatewayAttachment",
    "Properties": {
      "VpcId": {
        "Ref": "VPCMain"
      },
      "InternetGatewayId": {
        "Ref": "InternetGateway2Internetgateway"
      }
    }
  },
  "InternetGateway2Internetgateway": {
    "Type": "AWS::EC2::InternetGateway",
    "Properties": {}
  },
  
  "RouteTable2RT02AssociationSet26": {
    "Type": "AWS::EC2::SubnetRouteTableAssociation",
    "Properties": {
      "SubnetId": {
        "Ref": "PrivateSubnetA"
      },
      "RouteTableId": {
        "Ref": "RouteTable2RT0"
      }
    }
  },
  "RouteTable2RT02AssociationSet23": {
    "Type": "AWS::EC2::SubnetRouteTableAssociation",
    "Properties": {
      "SubnetId": {
        "Ref": "PrivateSubnetB"
      },
      "RouteTableId": {
        "Ref": "RouteTable2RT0"
      }
    }
  },
  "PublicServerSec2IpPermissionsEgress20": {
    "Type": "AWS::EC2::SecurityGroupEgress",
    "Properties": {
      "ToPort": "65535",
      "FromPort": "0",
      "GroupId": {
        "Ref": "PublicServerSec"
      },
      "IpProtocol": "-1",
      "CidrIp": "0.0.0.0/0"
    }
  },
  "RouteTable2RT02AssociationSet27": {
    "Type": "AWS::EC2::SubnetRouteTableAssociation",
    "Properties": {
      "SubnetId": {
        "Ref": "PublicSubnetB"
      },
      "RouteTableId": {
        "Ref": "RouteTable2RT0"
      }
    }
  },

  "NetworkAcl2DefaultACL2EntrySet21": {
    "Type": "AWS::EC2::NetworkAclEntry",
    "Properties": {
      "NetworkAclId": {
        "Ref": "NetworkAcl2DefaultACL"
      },
      "RuleNumber": 100,
      "Protocol": -1,
      "PortRange": {
        "To": "",
        "From": ""
      },
      "Egress": false,
      "RuleAction": "allow",
      "Icmp": {
        "Code": "",
        "Type": ""
      },
      "CidrBlock": "0.0.0.0/0"
    }
  },
  "NetworkAcl2DefaultACL2EntrySet20": {
    "Type": "AWS::EC2::NetworkAclEntry",
    "Properties": {
      "NetworkAclId": {
        "Ref": "NetworkAcl2DefaultACL"
      },
      "RuleNumber": 100,
      "Protocol": -1,
      "PortRange": {
        "To": "",
        "From": ""
      },
      "Egress": true,
      "RuleAction": "allow",
      "Icmp": {
        "Code": "",
        "Type": ""
      },
      "CidrBlock": "0.0.0.0/0"
    }
  },
  "NetworkAcl2DefaultACL2AssociationSet21": {
    "Type": "AWS::EC2::SubnetNetworkAclAssociation",
    "Properties": {
      "SubnetId": {
        "Ref": "PublicSubnetB"
      },
      "NetworkAclId": {
        "Ref": "NetworkAcl2DefaultACL"
      }
    }
  },
  "seclb2Ingress20": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "ToPort": "80",
      "FromPort": "80",
      "CidrIp": "0.0.0.0/0",
      "GroupId": {
        "Ref": "LoadBalancerSec"
      },
      "IpProtocol": "tcp"
    }
  },
   "seclb2Ingress20": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "ToPort": "443",
      "FromPort": "443",
      "CidrIp": "0.0.0.0/0",
      "GroupId": {
        "Ref": "LoadBalancerSec"
      },
      "IpProtocol": "tcp"
    }
  },
 
  

  "SettingsBucket": {
    "Type": "AWS::S3::Bucket",
    "Properties": {
      "BucketName": {
        "Fn::Join": [
          "",
          [
            "",
            {
              "Ref": "VPCMain"
            }
          ]
        ]
      }
    }
  }


}
}
